# Browser_user

./: .replit  Dockerfile  Dockerfile.agent  pnpm-lock.yaml  pyproject.toml  replit.md
artifacts/api-server/: package.json
artifacts/api-server/src/: app.ts
artifacts/api-server/src/routes/: browser.ts  chat.ts  index.ts
artifacts/browser-agent-server/: main.py
artifacts/nova-chat/: index.html  package.json  requirements.yaml
artifacts/nova-chat/.replit-artifact/: artifact.toml
artifacts/nova-chat/src/: App.tsx  index.css
artifacts/nova-chat/src/components/: ChatInput.tsx  MessageBubble.tsx  SettingsPanel.tsx
artifacts/nova-chat/src/hooks/: use-chat-session.ts
artifacts/nova-chat/src/pages/: BrowserAgentPage.tsx  ChatPage.tsx  MobileBrowserPage.tsx
artifacts/nova-mobile/: dev-server.mjs  index.html  package.json  vite.config.ts
artifacts/nova-mobile-v2/: package.json
artifacts/nova-mobile/.replit-artifact/: artifact.toml
artifacts/nova-mobile/src/: App.tsx  index.css
artifacts/nova-mobile/src/context/: BrowserContext.tsx
artifacts/nova-mobile/src/hooks/: use-chat-session.ts
artifacts/nova-mobile/src/pages/: MobileBrowserPage.tsx  (+1 more)
attached_assets/: Pasted-Ao-invez-de-usa-nova-ai-quero-usa-ollama-sem-api-quero-_1773795245162.txt  Pasted-Quick-Start-Nova-API-uses-API-keys-for-authentication-v_1773676132742.txt  Pasted-Text-Generation-Single-Turn-Request-from-openai-import-_1773705512308.txt  Pasted-Use-the-latest-version-We-ship-every-day-improvements-f_1773676042647.txt  content-1773711646035.md
lib/api-spec/: openapi.yaml
