[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "browser-use>=0.12.2",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "langchain-openai>=1.1.9",
    "playwright>=1.58.0",
    "python-dotenv>=1.2.1",
    "sse-starlette>=3.3.2",
    "uvicorn>=0.42.0",
]
